--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,18 @@
+@import url('./background.css');
+@import url('./header.css');
+@import url('./main.css');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
+body, html{
+  overflow: hidden;
+}
+
+
 
 :root {
   --text: #EDF1F7;
@@ -24,3 +34,15 @@ a {
 button:hover {
   cursor: pointer;
 }
+
+#app{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  width: 100%;
+  height: 100%;
+
+  overflow: hidden;
+}
+
